--- a/index.html
+++ b/index.html
@@ -12,15 +12,16 @@
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/png">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-    </script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+    crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
         integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
     </script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
     </script>
+    <script src="scripts/script.js"></script>
 </head>
 
 <body>
@@ -58,7 +59,7 @@
                     </h1>
                 </div>
                 <div class="col-md-4">
-                    <img src="images/bowtiered2.png" class="img-fluid" alt="red-bowtie">
+                    <img id="title-image" src="images/bowtiered2.png" class="img-fluid mt-4" alt="red-bowtie">
                 </div>
             </div>
         </div>
@@ -70,55 +71,74 @@
 
     <section id="company">
         <div class="container-fluid text-center override-pad">
-            <div class="section-bar row">
+            <div class="section-bar text-center">
                 <div class="col">
                     <h2>OUR COMPANY</h2>
                     <h3>Is your company</h3>
                 </div>
             </div>
             <div class="row py-3 body-text">
-                <div class="col"><button>Who We Are</button>
-                    <button>What We Do</button>
-                    <button>What We Believe</button>
-                    <p id="who">We are Harry and Sally, a pair of Doctors who turned their love of bowties and passion
-                        for
-                        creating
-                        into
-                        a business. We started selling bowties locally, and became known for our quality and attention
-                        to
-                        detail. We eventually bought a wharehouse, and scaled our business to the largest custome bowtie
-                        botique
-                        on the web. </p>
-                    <p id="what">We handcraft every bowtie we ship. We personally vet and train every employer who works
-                        for
-                        us,
-                        so
-                        that
-                        each and every bowtie is crafted with the same combination of exacting standards and personal
-                        touch
-                        that
-                        you would recieve from us. Even Harry and Sally frequent still frequently create bowties for our
-                        customers.</p>
-                    <img src="images/bowtie-making.png" width="40%" class="img-fluid" alt="making a bowtie">
+                <div class="col">
+                    <button id="who-btn" class="btn btn-dark btn-selected">Who We Are</button>
+                    <button id="what-btn" class="btn btn-dark">What We Do</button>
+                    <button id="believe-btn" class="btn btn-dark">What We Believe</button>
+                    <div id="who">
+                        <p>We are Harry and Sally, a pair of Doctors who turned their love of bowties and
+                            passion
+                            for
+                            creating
+                            into
+                            a business. We started selling bowties locally, and became known for our quality and
+                            attention
+                            to
+                            detail. We eventually bought a wharehouse, and scaled our business to the largest custome
+                            bowtie
+                            botique
+                            on the web. </p>
+                    </div>
+                    <div id="what" class="start-hidden">
+                        <p>We handcraft every bowtie we ship. We personally vet and train every employer who
+                            works
+                            for
+                            us,
+                            so
+                            that
+                            each and every bowtie is crafted with the same combination of exacting standards and
+                            personal
+                            touch
+                            that
+                            you would recieve from us. Even Harry and Sally frequent still frequently create bowties for
+                            our
+                            customers.</p>
+                            <img src="images/bowtie-making.png" width="50%" class="img-fluid rounded-lg border border-dark" alt="making a bowtie">
+                    </div>
+                    
 
-                    <p id="believe">We believe that there is no occasion where a bowtie can not be proudly worn. From a
-                        traditional black
-                        tie
-                        affair, or a saturday night at the club. We also believe that bowties are inherently personal,
-                        and
-                        that
-                        each bowtie should reflect the wearers personality and style. This is why we feel that the only
-                        way
-                        to
-                        craft a bowtie, is to craft it by hand, with input from the person who will end up wearing it.
-                        You
-                        tell
-                        us what you want, and we will handcraft it, for you and no one else. There are no robotic
-                        machines
-                        or
-                        bulk sewing machines in our wharehouse, only small, hand operated machines that your grandmother
-                        might
-                        have used.</p>
+                    <div id="believe" class="start-hidden">
+                        <p>We believe that there is no occasion where a bowtie can not be proudly worn.
+                            From a
+                            traditional black
+                            tie
+                            affair, or a saturday night at the club. We also believe that bowties are inherently
+                            personal,
+                            and
+                            that
+                            each bowtie should reflect the wearers personality and style. This is why we feel that the
+                            only
+                            way
+                            to
+                            craft a bowtie, is to craft it by hand, with input from the person who will end up wearing
+                            it.
+                            You
+                            tell
+                            us what you want, and we will handcraft it, for you and no one else. There are no robotic
+                            machines
+                            or
+                            bulk sewing machines in our wharehouse, only small, hand operated machines that your
+                            grandmother
+                            might
+                            have used.</p>
+                    </div>
                 </div>
             </div>
     </section>
