more stuff to buttons

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
             </div>
             <div class="row py-3 body-text">
                 <div class="col">
-                    <button id="who-btn" class="btn btn-dark btn-selected">Who We Are</button>
-                    <button id="what-btn" class="btn btn-dark">What We Do</button>
-                    <button id="believe-btn" class="btn btn-dark">What We Believe</button>
+                    <button id="who-btn" class="btn btn-sm btn-dark btn-selected">Who We Are</button>
+                    <button id="what-btn" class="btn btn-sm btn-dark">What We Do</button>
+                    <button id="believe-btn" class="btn btn-sm btn-dark">What We Believe</button>
                     <div id="who">
                         <p>We are Harry and Sally, a pair of Doctors who turned their love of bowties and
                             passion
