--- a/index.html
+++ b/index.html
@@ -5,23 +5,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bowtie Design</title>
+
+    <!-- #region Sources -->
+    <!-- Google Fonts -->
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;900&family=Ubuntu:wght@400;700&display=swap"
         rel="stylesheet">
+
+    <!-- CSS Style Sheet -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
+
+    <!-- Favicon -->
     <link rel="shortcut icon" href="images/favicon.ico" type="image/png">
+
+    <!-- Bootstrap Scripts -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-    crossorigin="anonymous"></script>
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
         integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
     </script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
     </script>
+
+    <!-- Custom Scripts -->
     <script src="scripts/script.js"></script>
+    <!-- #endregion -->
+
 </head>
 
 <body>
@@ -38,9 +50,9 @@
                         <a class="nav-link dropdown-toggle" href="" d="navbarDropdown" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Company</a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Who We Are</a>
-                            <a class="dropdown-item" href="#">What We Do</a>
-                            <a class="dropdown-item" href="#">What We Believe</a>
+                            <a id="dropdown-who" class="dropdown-item" href="#company">Who We Are</a>
+                            <a id="dropdown-what" class="dropdown-item" href="#company">What We Do</a>
+                            <a id="dropdown-believe" class="dropdown-item" href="#company">What We Believe</a>
                         </div>
                     </li>
                     <li class="nav-item">
@@ -110,9 +122,10 @@
                             you would recieve from us. Even Harry and Sally frequent still frequently create bowties for
                             our
                             customers.</p>
-                            <img src="images/bowtie-making.png" width="50%" class="img-fluid rounded-lg border border-dark" alt="making a bowtie">
+                        <img src="images/bowtie-making.png" width="50%" class="img-fluid rounded-lg border border-dark"
+                            alt="making a bowtie">
                     </div>
-                    
+
 
                     <div id="believe" class="start-hidden">
                         <p>We believe that there is no occasion where a bowtie can not be proudly worn.
@@ -149,19 +162,51 @@
                 <h2>STYLES AND MATERIALS</h2>
                 <h3>We have a large stock of quality materials in varius colors and prints</h3>
             </div>
-            <div>
-                <img src="images/bowtiepink.png" class="img-fluid" alt="pink bowtie">
-                <p>Bowties are not just for men, we have a wide selection of in stock colors and styles for women and
-                    children.</p>
-                <img src="images/bowtie-blue-diamondtip.png" class="img-fluid" alt="diamond tip bowtie">
-                <p>We can make any popular style, including slim, diamond tip, and reversable ties for when you want
-                    versatility while saving space.</p>
-                <img src="images/bowtie-silver-silkknit.png" class="img-fluid" alt="silk knit bowtie">
-                <p>Materials? We got all the popular ones in stock, from traditional silk, to wool, silk knit, cotton
-                    and linen</p>
+
+            <div id="style-carousel" class="carousel slide" data-interval="false">
+                <ol class="carousel-indicators">
+                    <li data-target="#style-carousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#style-carousel" data-slide-to="1"></li>
+                    <li data-target="#style-carousel" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="images/bowtiepink.png" class="img-fluid" alt="pink bowtie">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Not Just For Men</h5>
+                            <p>Bowties are not just for men, we have a wide selection of in stock colors and styles for
+                                women and children.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item"><img src="images/bowtie-blue-diamondtip.png" class="img-fluid"
+                            alt="diamond tip bowtie">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>For Any Occasion</h5>
+                            <p>We can make any popular style, including slim, diamond tip, and reversable ties for when
+                                you want versatility while saving space.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item"><img src="images/bowtie-silver-silkknit.png" class="img-fluid"
+                            alt="silk knit bowtie">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Perfect Feel and Look</h5>
+                            <p>Materials? We got all the popular ones in stock, from traditional silk, to wool, silk
+                                knit,
+                                cotton
+                                and linen</p>
+                        </div>
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#style-carousel" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#style-carousel" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
         </div>
-
 
     </section>
 
