Further adjusted carousel so show caption on sm screens.

--- a/index.html
+++ b/index.html
@@ -172,7 +172,12 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img src="images/bowtiepink.png" class="img-fluid" alt="pink bowtie">
-                        <div class="carousel-caption d-none d-md-block">
+                        <div class="carousel-caption d-none d-sm-block">
+                            <h5>Not Just For Men</h5>
+                            <p>Bowties are not just for men, we have a wide selection of in stock colors and styles for
+                                women and children.</p>
+                        </div>
+                        <div class="sm-caption d-block d-sm-none">
                             <h5>Not Just For Men</h5>
                             <p>Bowties are not just for men, we have a wide selection of in stock colors and styles for
                                 women and children.</p>
@@ -180,7 +185,12 @@
                     </div>
                     <div class="carousel-item"><img src="images/bowtie-blue-diamondtip.png" class="img-fluid"
                             alt="diamond tip bowtie">
-                        <div class="carousel-caption d-none d-md-block">
+                        <div class="carousel-caption d-none d-sm-block">
+                            <h5>For Any Occasion</h5>
+                            <p>We can make any popular style, including slim, diamond tip, and reversable ties for when
+                                you want versatility while saving space.</p>
+                        </div>
+                        <div class="sm-caption d-block d-sm-none">
                             <h5>For Any Occasion</h5>
                             <p>We can make any popular style, including slim, diamond tip, and reversable ties for when
                                 you want versatility while saving space.</p>
@@ -188,7 +198,14 @@
                     </div>
                     <div class="carousel-item"><img src="images/bowtie-silver-silkknit.png" class="img-fluid"
                             alt="silk knit bowtie">
-                        <div class="carousel-caption d-none d-md-block">
+                        <div class="carousel-caption d-none d-sm-block">
+                            <h5>Perfect Feel and Look</h5>
+                            <p>Materials? We got all the popular ones in stock, from traditional silk, to wool, silk
+                                knit,
+                                cotton
+                                and linen</p>
+                        </div>
+                        <div class="sm-caption d-block d-sm-none">
                             <h5>Perfect Feel and Look</h5>
                             <p>Materials? We got all the popular ones in stock, from traditional silk, to wool, silk
                                 knit,
