small chages to title bar margin

--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
                 </ul>
             </div>
         </nav>
-        <div class="container-fluid mb-5">
+        <div class="container-fluid mb-4 mt-3">
             <div class="row">
                 <div class="col-md-8">
-                    <h1 class="text-white">The only thing cooler than a bowtie, is <strong>your</strong> custom bowtie.
+                    <h1 class="text-white mt-4">The only thing cooler than a bowtie, is <strong>your</strong> custom bowtie.
                     </h1>
                 </div>
                 <div class="col-md-4">
@@ -95,62 +95,30 @@
                     <button id="what-btn" class="btn btn-sm btn-dark">What We Do</button>
                     <button id="believe-btn" class="btn btn-sm btn-dark">What We Believe</button>
                     <div id="who">
-                        <p>We are Harry and Sally, a pair of Doctors who turned their love of bowties and
-                            passion
-                            for
-                            creating
-                            into
-                            a business. We started selling bowties locally, and became known for our quality and
-                            attention
-                            to
-                            detail. We eventually bought a wharehouse, and scaled our business to the largest custome
-                            bowtie
-                            botique
-                            on the web. </p>
+                        <p>We are Harry and Sally, a pair of Doctors who turned their love of bowties and passion for
+                            creating into a business. We started selling bowties locally, and became known for our
+                            quality and attention to detail. We eventually bought a wharehouse, and scaled our business
+                            to the largest custome bowtie botique on the web. </p>
                     </div>
                     <div id="what" class="start-hidden">
-                        <p>We handcraft every bowtie we ship. We personally vet and train every employer who
-                            works
-                            for
-                            us,
-                            so
-                            that
-                            each and every bowtie is crafted with the same combination of exacting standards and
-                            personal
-                            touch
-                            that
-                            you would recieve from us. Even Harry and Sally frequent still frequently create bowties for
-                            our
-                            customers.</p>
+                        <p>We handcraft every bowtie we ship. We personally vet and train every employer who works for
+                            us, so that each and every bowtie is crafted with the same combination of exacting standards
+                            and personal touch that you would recieve from us. Even Harry and Sally frequent still
+                            frequently create bowties for our customers.</p>
                         <img src="images/bowtie-making.png" width="50%" class="img-fluid rounded-lg border border-dark"
                             alt="making a bowtie">
                     </div>
 
 
                     <div id="believe" class="start-hidden">
-                        <p>We believe that there is no occasion where a bowtie can not be proudly worn.
-                            From a
-                            traditional black
-                            tie
-                            affair, or a saturday night at the club. We also believe that bowties are inherently
-                            personal,
-                            and
-                            that
-                            each bowtie should reflect the wearers personality and style. This is why we feel that the
-                            only
-                            way
-                            to
-                            craft a bowtie, is to craft it by hand, with input from the person who will end up wearing
-                            it.
-                            You
-                            tell
-                            us what you want, and we will handcraft it, for you and no one else. There are no robotic
-                            machines
-                            or
-                            bulk sewing machines in our wharehouse, only small, hand operated machines that your
-                            grandmother
-                            might
-                            have used.</p>
+                        <p>We believe that there is no occasion where a bowtie can not be proudly worn. From a
+                            traditional black tie affair, or a saturday night at the club. We also believe that bowties
+                            are inherently personal, and that each bowtie should reflect the wearers personality and
+                            style. This is why we feel that the only way to craft a bowtie, is to craft it by hand, with
+                            input from the person who will end up wearing it. You tell us what you want, and we will
+                            handcraft it, for you and no one else. There are no robotic machines or bulk sewing machines
+                            in our wharehouse, only small, hand operated machines that your grandmother might have used.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -201,16 +169,12 @@
                         <div class="carousel-caption d-none d-sm-block">
                             <h5>Perfect Feel and Look</h5>
                             <p>Materials? We got all the popular ones in stock, from traditional silk, to wool, silk
-                                knit,
-                                cotton
-                                and linen</p>
+                                knit, cotton and linen</p>
                         </div>
                         <div class="sm-caption d-block d-sm-none">
                             <h5>Perfect Feel and Look</h5>
                             <p>Materials? We got all the popular ones in stock, from traditional silk, to wool, silk
-                                knit,
-                                cotton
-                                and linen</p>
+                                knit, cotton and linen</p>
                         </div>
                     </div>
                 </div>
@@ -236,13 +200,10 @@
             <div>
                 <p>While we carry a large selection of materials in a large selection of prints, finishs and colors, we
                     understand you might want something that is truly "you". We will work with you, and our network of
-                    textile
-                    suppliers, to get that perfect design. </p>
+                    textile suppliers, to get that perfect design. </p>
                 <img src="images/bowtie-christmas.png" class="img-fluid" alt="christmas vacation bowtie">
                 <p>We can turn any pattern you want have into a fantastic bowtie. We will cut and create a bowtie using
-                    your
-                    own
-                    pattern so that it looks clean, without unsightly seams or missing elements.</p>
+                    your own pattern so that it looks clean, without unsightly seams or missing elements.</p>
             </div>
         </div>
     </section>
